2000-11-13  Havoc Pennington  <hp@redhat.com>

	* io-png.c (png_simple_error_callback): fix error message to not
	say "save" since it's used for loading

2000-11-11  Hans Breuer <Hans@Breuer.Org>

	* gdk-pixbuf-io.c : Fix all function prototype macros for self 
	contained image handlers (!USE_G_MODULE). Files to save should
	be opened in binary mode, fopen(s, "wb").

	* io-xpm.c : added HAVE_UNISTD_H condition

2000-11-11  Tor Lillqvist  <tml@iki.fi>

	* gdk_pixbuf.def: Add gdk_pixbuf_new_subpixbuf.

	* io-tiff.c (gdk_pixbuf__tiff_image_begin_load): Use
	g_file_open_tmp() (just added to GLib) instead of mkstemp() (or
	mktemp() and open()).
	
	* io-xpm.c (gdk_pixbuf__xpm_image_begin_load): Ditto.

2000-11-01  Havoc Pennington  <hp@pobox.com>

	* gdk-pixbuf.c (gdk_pixbuf_new_subpixbuf): New function to create 
	a pixbuf pointing to a subregion of another pixbuf.

2000-10-16  Tor Lillqvist  <tml@iki.fi>

	* gdk-pixbuf-io.c: Define also m_save (for the non-gmodule case).

2000-10-16  Havoc Pennington  <hp@redhat.com>

	* gdk-pixbuf-io.c (gdk_pixbuf_get_module)
	(gdk_pixbuf_get_named_module) (gdk_pixbuf_load_module): 
	add error reporting here also

	* make-inline-pixbuf.c (main): use GError

	* io-xpm.c: include unistd.h

	* gdk-pixbuf-util.c: include string.h

	* io-*.c: add error reporting
	
	* gdk-pixbuf-animation.c (gdk_pixbuf_animation_new_from_file): add
	error reporting

	* gdk-pixbuf-io.c (gdk_pixbuf_new_from_file): Add error reporting

	* gdk-pixbuf-io.h: Add GError** to load_increment and load 
	methods

	* gdk-pixbuf-io.c (gdk_pixbuf_save) (gdk_pixbuf_savev): return 
	a G_FILE_ERROR if we fail to write or close the file.

	* gdk-pixbuf.h: remove GDK_PIXBUF_ERROR_IO, instead we'll use
	G_FILE_ERROR_*. Rename enum to GdkPixbufError, properly following
	the GError naming rules. Add GError** to load functions.

2000-10-06  Havoc Pennington  <hp@redhat.com>

	* gdk-pixbuf.h: add GdkPixbufAlphaMode

2000-10-06  Havoc Pennington  <hp@redhat.com>
