@@ -9,70 +9,70 @@ loaderdir = $(libdir)/gtk-2.0/$(GTK_VERSION)/loaders
 # The PNG plugin.
 #
 libpixbufloader_png_la_SOURCES = io-png.c
-libpixbufloader_png_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_png_la_LDFLAGS = -avoid-version -module
 libpixbufloader_png_la_LIBADD = $(LIBPNG)
 
 #
 # The JPEG loader
 #
 libpixbufloader_jpeg_la_SOURCES = io-jpeg.c
-libpixbufloader_jpeg_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_jpeg_la_LDFLAGS = -avoid-version -module
 libpixbufloader_jpeg_la_LIBADD = $(LIBJPEG)
 
 #
 # The XPM loader
 #
 libpixbufloader_xpm_la_SOURCES = io-xpm.c
-libpixbufloader_xpm_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_xpm_la_LDFLAGS = -avoid-version -module
 libpixbufloader_xpm_la_LIBADD =
 
 #
 # The GIF loader
 #
 libpixbufloader_gif_la_SOURCES = io-gif.c
-libpixbufloader_gif_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_gif_la_LDFLAGS = -avoid-version -module
 libpixbufloader_gif_la_LIBADD =
 
 #
 # The ICO loader
 #
 libpixbufloader_ico_la_SOURCES = io-ico.c
-libpixbufloader_ico_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_ico_la_LDFLAGS = -avoid-version -module
 libpixbufloader_ico_la_LIBADD =
 
 #
 # The RAS loader
 #
 libpixbufloader_ras_la_SOURCES = io-ras.c
-libpixbufloader_ras_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_ras_la_LDFLAGS = -avoid-version -module
 libpixbufloader_ras_la_LIBADD =
 
 #
 # The TIFF loader
 #
 libpixbufloader_tiff_la_SOURCES = io-tiff.c
-libpixbufloader_tiff_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_tiff_la_LDFLAGS = -avoid-version -module
 libpixbufloader_tiff_la_LIBADD = $(LIBTIFF)
 
 #
 # The PNM loader
 #
 libpixbufloader_pnm_la_SOURCES = io-pnm.c
-libpixbufloader_pnm_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_pnm_la_LDFLAGS = -avoid-version -module
 libpixbufloader_pnm_la_LIBADD =
 
 #
 # The BMP loader
 #
 libpixbufloader_bmp_la_SOURCES = io-bmp.c
-libpixbufloader_bmp_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_bmp_la_LDFLAGS = -avoid-version -module
 libpixbufloader_bmp_la_LIBADD =
 
 #
 # The WBMP loader
 #
 libpixbufloader_wbmp_la_SOURCES = io-wbmp.c
-libpixbufloader_wbmp_la_LDFLAGS = -version-info 1:0:0 -module
+libpixbufloader_wbmp_la_LDFLAGS = -avoid-version -module
 
 if HAVE_PNG
 PNG_LIB = libpixbufloader-png.la
